--- a/index.html
+++ b/index.html
@@ -7,8 +7,38 @@
     <title>Excursion</title>
 </head>
 <body>
+    <!-- HEADER -->
     <header>
         <h1>Discover hidden places in the world around you</h1>
     </header>
+
+    <!-- SECTION 1 -->
+    <section>
+        <a href=""><p>Download Excursion (coming soon!)</p></a>
+        <video autoplay muted>
+            <source src="resources/videos/excursion.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </section>
+
+    <!-- SECTION 2 -->
+    <section>
+        <h2>Your personal travel guide</h2>
+        <p class='subtitle'>Excursion remembers places you like, and recommends new points of interest about you.</p>
+        <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg">
+        <br><br>
+    </section>
+
+    <!-- SECTION 3 -->
+    <section>
+        <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png">
+        <h2>Coming Soon for iPhone and Android</h2>
+        <a href=""><p>Download Excursion (Coming soon!)</p></a>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+        <p class='subtitle right'>© Excursion</p>
+    </footer>
 </body>
 </html>
